@@ -1,1 +1,1 @@
-sudo cp * /omd/versions/default/share/doc/check_mk/checks/
+sudo cp * /omd/versions/default/share/check_mk/checkman/
