@@ -19,6 +19,7 @@
     * jolokia_metrics.mem: now supports warn/crit levels for heap, nonheap, totalheap
     * jolokia_metrics.mem: add dedicated PNP graph
     * FIX: logwatch.ec: use UNIX socket instead of Pipe for forwarding into EC 
+    * livestatus_status: new check for monitoring performance of monitoring
 
     Multisite:
     * Added comment painter to notification related views
